# foris-controller-storage-module

./: .gitignore  CHANGELOG.md  CHANGELOG.rst  README.rst  pyproject.toml  requirements.txt  setup.py
foris_controller_backends/storage/: __init__.py
foris_controller_modules/storage/: __init__.py
foris_controller_modules/storage/handlers/: __init__.py  mock.py  openwrt.py
foris_controller_modules/storage/schema/: storage.json
scripts/: format_and_set_srv.sh  lighttpd.conf  lighttpd_srv_setting.sh  self-test.bats  srv.init  syslog-ng-logrotate.conf  syslog-ng.conf  syslog-ng.sh
tests/: conftest.py  test_storage.py
tests/test_root/sys/class/block/mmcblk0p1/: size
tests/test_root/sys/class/block/sda/: size
tests/ubus-acl/: storage.json
