[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foris-controller-storage-module"
dynamic = ["version"]
description = "Storage module for foris-controller"
readme = "README.rst"
license = "GPL-3.0-only"
authors = [
    { name = "CZ.NIC, z.s.p.o. (http://www.nic.cz/)", email = "packaging@turris.cz" },
]
dependencies = [
    "foris-controller",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "ubus",
    "paho-mqtt",
    "foris-client",
    "foris-controller-testtools",
]

[project.urls]
Homepage = "https://gitlab.nic.cz/turris/foris-controller/foris-controller-storage-module"

[tool.hatch.version]
path = "foris_controller_storage_module/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/foris_controller_modules",
    "/foris_controller_backends",
    "/foris_controller_storage_module",
]

[tool.hatch.build.targets.wheel]
include = [
    "/foris_controller_modules",
    "/foris_controller_backends",
    "/foris_controller_storage_module",
]
